--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,26 +11,26 @@ services:
     build:
       context: .
       dockerfile: src/PublicApi/Dockerfile
-  prometheus:
-    image: prom/prometheus
-    restart: always
-    ports:
-      - 9090:9090
-    volumes:
-      - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro
-    networks:
-      - dotnetcorepromgrafana
+  #prometheus:
+  #  image: prom/prometheus
+  #  restart: always
+  #  ports:
+  #    - 9090:9090
+  #  volumes:
+  #    - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro
+  #  networks:
+  #    - dotnetcorepromgrafana
 
-  grafana: 
-    image: grafana/grafana
-    #command:
-    environment:
-      - GF_SECURITY_ADMIN_PASSWORD=P@ssw0rd
-    restart: always
-    ports:
-      - 3000:3000
-    networks:
-      - dotnetcorepromgrafana
+  #grafana: 
+  #  image: grafana/grafana
+  #  #command:
+  #  environment:
+  #    - GF_SECURITY_ADMIN_PASSWORD=P@ssw0rd
+  #  restart: always
+  #  ports:
+  #    - 3000:3000
+  #  networks:
+  #    - dotnetcorepromgrafana
 
 networks:
   dotnetcorepromgrafana:
