--- a/gitops/project.yaml
+++ b/gitops/project.yaml
@@ -3,7 +3,7 @@ kind: AppProject
 metadata:
   name: eshop-on-web
   namespace: argocd
-  # Finalizer that ensures that project is not deleted until it is not referenced by any application
+  # Finalizer that ensures that project is not deleted until it is not referenced by the application
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
